--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                 </div>
             </div>
             <div class="header__logo hidden-sm-down">
-                <h1 class="text-info fs-20 b-r">Google <span class="text-success">Drive</span> </h1>
+                <h1 class="text-info fs-20 b-r"><img src="./assets/img/unnamed.png" class="icon" alt="">
+                    <span>Drive</span> </h1>
             </div>
 
 
@@ -62,17 +63,145 @@
 
             <form class="search">
                 <div class="search__inner text-black">
-                    <input type="text" class="search__text bg-gray-light" placeholder="Search Drive">
+                    <input type="text" class="search__text bg-gray-light width" placeholder="Search Drive">
                     <i class="zmdi zmdi-search search__helper" data-ma-action="search-close"></i>
                 </div>
             </form>
 
+            <div class="dropdown nav-dropdown">
+                <i class="fa fa-check-circle-o fa-2x nav-icons" id="dropdownMenu" data-toggle="dropdown"
+                    aria-haspopup="true" aria-hidden="false"></i>
+                <div class="dropdown-menu mt-5" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Offline Preview</a>
+                </div>
+            </div>
+            <div class="dropdown nav-dropdown">
+                <i class="fa fa-question-circle-o fa-2x nav-icons" id="dropdownMenu" data-toggle="dropdown"
+                    aria-haspopup="true" aria-hidden="false"></i>
+                <div class="dropdown-menu mt-5" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Help</a>
+                    <a class="dropdown-item" href="#">Training</a>
+                    <a class="dropdown-item" href="#">Updates</a>
+                    <a class="dropdown-item" href="#">Send feedback</a>
+                </div>
+            </div>
 
-            <i class="fa fa-check-circle-o fa-2x nav-icons" aria-hidden="true"></i>
-            <i class="fa fa-question-circle-o fa-2x nav-icons" aria-hidden="true"></i>
-            <i class="fa fa-cog fa-2x nav-icons" aria-hidden="true"></i>
-            <i class="fa fa-bars fa-2x nav-icons" aria-hidden="true"></i>
-            <i class="fa fa-user-circle fa-2x profile-icon" aria-hidden="true"></i>
+            <div class="dropdown nav-dropdown">
+                <i class="fa fa-cog fa-2x nav-icons" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true"
+                    aria-hidden="false"></i>
+                <div class="dropdown-menu mt-5 dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="#">Settings</a>
+                    <a class="dropdown-item" href="#">Get Backup and Sync for windows</a>
+                    <a class="dropdown-item" href="#">Keyboard shortcuts</a>
+                </div>
+            </div>
+
+
+            <div class="dropdown nav-dropdown">
+                <i class="fa fa-bars fa-2x nav-icons" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true"
+                    aria-hidden="false"></i>
+                <div class="dropdown-menu mt-5 dropdown-menu-right drop" aria-labelledby="dropdownMenuButton">
+                    <div class="row">
+                        <div class="col-3">
+                            <i class="fa fa-user-circle fa-4x profile-icon ml-4" aria-hidden="true"></i>
+                            <a class="dropdown-item" href="#">Accounts</a>
+                        </div>
+                        <div class="col-3">
+                            <i class="fa fa-google fa-4x google ml-5" aria-hidden="true"></i>
+                            <a class="dropdown-item ml-4" href="#">Search</a>
+                        </div>
+                        <div class="col-3">
+                            <img src="./assets/img/Google-Maps-icon.png" class="icon ml-5" alt="">
+                            <a class="dropdown-item ml-4" href="#">Maps</a>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./assets/img/YouTube-icon.png" class="icon ml-4" alt="">
+                            <a class="dropdown-item" href="#">Youtube</a>
+                        </div>
+                        <div class="col-3">
+                            <img src="./assets/img/Google-Play-Store-alt-icon.png" class="icon ml-5" alt="">
+                            <a class="dropdown-item ml-4" href="#">Play</a>
+                        </div>
+                        <div class="col-3">
+                            <img src="./assets/img/Location-News-icon.png" class="icon ml-5" alt="">
+                            <a class="dropdown-item ml-4" href="#">News</a>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="./assets/img/Communication-gmail-icon.png" class="icon ml-4" alt="">
+                            <a class="dropdown-item" href="#">Gmail</a>
+                        </div>
+                        <div class="col-3">
+                            <img src="./assets/img/phone-icon.png" class="icon ml-5" alt="">
+                            <a class="dropdown-item ml-4" href="#">Contacts</a>
+                        </div>
+                        <div class="col-3">
+                            <img src="./assets/img/unnamed.png" class="icon ml-5" alt="">
+                            <a class="dropdown-item ml-4" href="#">Drive</a>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-3">
+                            <img src="http://icons.iconarchive.com/icons/dtafalonso/android-lollipop/128/calendar-icon.png"
+                                class="icon ml-4" alt="">
+                            <a class="dropdown-item" href="#">Calender</a>
+                        </div>
+                        <div class="col-3">
+                            <i class="fa fa-google fa-4x google ml-5" aria-hidden="true"></i>
+                            <a class="dropdown-item ml-4" href="#">Translate</a>
+                        </div>
+                        <div class="col-3">
+                            <img src="./assets/img/google-photos-icon.png" class="icon ml-5" alt="">
+                            <a class="dropdown-item ml-4" href="#">Photos</a>
+                        </div>
+                    </div>
+
+                    <div class="more">
+                        <a href="#"><span><br>More</span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="dropdown nav-dropdown">
+                <i class="fa fa-user-circle fa-2x profile-icon" id="dropdownMenu" data-toggle="dropdown"
+                    aria-haspopup="true" aria-hidden="false"></i>
+                <div class="dropdown-menu mt-5 dropdown-menu-right dropi" aria-labelledby="dropdownMenuButton">
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="fa fa-user-circle fa-5x ml-4 profile-icon" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-1"></div>
+                        <div class="col-6 ml-3">
+                            <span>rita london</span>
+                            <span>augustineritalondon@gmail.com</span>
+                            <span class="span">privacy</span>
+
+                            <br><br>
+                            <button type="button" class="btn btn-primary"> Google Account </button>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-2">
+                            <i class="fa fa-user-circle fa-3x ml-4" aria-hidden="true"></i>
+                        </div>
+                        <div class="col-6">
+                            <span>Kelly London</span>
+                            <span>kellyblizz343@gmail.com</span>
+                        </div>
+                    </div>
+                    <hr>
+                    <button type="button" class="btn btn-light ml-4">Add Account</button>
+                    <button type="button" class="btn btn-light button mr-4">Sign-out</button>
+                </div>
+            </div>
+
 
 
             <!-- <ul class="top-nav">
@@ -119,12 +248,27 @@
 
 
 
-
-
         <aside class="sidebar">
             <div class="scrollbar-inner">
-                <div class="container"> <button class="btn btn-light btn-lg btnstyle"><i class="fa fa-plus fa-1x"
-                            aria-hidden="true"></i> New</button></div>
+                <div class="container">
+                    <div class="dropdown nav-dropdown">
+                        <button class="btn btn-light btn-lg btnstyle mt-3" id="dropdownMenu" data-toggle="dropdown"
+                            aria-haspopup="true" aria-hidden="false"><i class="fa fa-plus fa-1x"></i>
+                            New</button>
+                        <div class="dropdown-menu mt-3 ml-3 dropdown-menu-left dropii"
+                            aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="#">Folder</a>
+                            <hr>
+                            <a class="dropdown-item" href="#">File Upload</a>
+                            <a class="dropdown-item" href="#">Folder Upload</a>
+                            <hr>
+                            <a class="dropdown-item" href="#">Google</a>
+                            <a class="dropdown-item" href="#">Google Sheets</a>
+                            <a class="dropdown-item" href="#">Google Slide</a>
+                        </div>
+                    </div>
+
+                </div><br>
 
                 <ul class="navigation">
                     <li [ngClass]="(url == '/Dashboard') ? 'active' : ''"><a routerLink="/Dashboard"><i
@@ -196,9 +340,15 @@
                         aria-haspopup="true" aria-expanded="false">
                         My Drive
                     </button>
-                    <div class="dropdown-menu mt-5" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Something</a>
-                        <a class="dropdown-item" href="#">Something1</a>
+                    <div class="dropdown-menu mt-5 dropii" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item displ" href="#">Folder</a>
+                        <hr>
+                        <a class="dropdown-item" href="#">File Upload</a>
+                        <a class="dropdown-item" href="#">Folder Upload</a>
+                        <hr>
+                        <a class="dropdown-item" href="#">Google</a>
+                        <a class="dropdown-item" href="#">Google Sheets</a>
+                        <a class="dropdown-item" href="#">Google Slide</a>
                     </div>
                 </div>
                 <div class="col-3">
@@ -239,6 +389,10 @@
                 </table>
 
             </div>
+
+
+
+
 
             <!-- <div class="row">
                 <div class="col-sm-6 col-md-3">
